--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "hono": "^4.5.6",
-    "prisma": "^5.18.0"
+    "prisma": "^5.18.0",
+    "schema": "^0.2.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
